--- a/css/contact.css
+++ b/css/contact.css
@@ -79,6 +79,7 @@ textarea {
 textarea {
   height: 125px;
   padding-top: 5px;
+  margin-bottom: 0;
 }
 form .shadow-btn {
   max-width: 100%;
@@ -114,9 +115,6 @@ form .shadow-btn {
   }
 }
 @media screen and (max-width: 991px) {
-  .message {
-    margin-bottom: 50px;
-  }
   header .contact-form {
     margin-top: 50px;
     padding-right: 0;
