--- a/css/home.css
+++ b/css/home.css
@@ -4,7 +4,7 @@ body {
 }
 /* header */
 header {
-  padding-bottom: 77px;
+  padding-bottom: 75px;
   display: flex;
   flex-grow: 2;
 }
@@ -147,7 +147,7 @@ footer p {
     padding-bottom: 35px;
   }
   header .map-wrapper {
-    margin-top: 47px;
+    margin-top: 45px;
   }
   header .header-text {
     font-size: 16px;
